<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="@dimen/activity_vertical_margin">

                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_person"/>

                <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="bottom|end"
                        android:layout_margin="@dimen/activity_margin"
                        android:src="@drawable/ic_camera_black"/>

            </FrameLayout>

            <!--<TextView-->
                    <!--style="@style/PassFormStyle"-->
                    <!--android:id="@+id/info_pass"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/info_pass"-->
                    <!--android:fontFamily="@font/roboto"/>-->

            <android.support.design.widget.TextInputLayout
                    style="@style/TextInputLayoutStyle">

                <AutoCompleteTextView
                        android:id="@+id/surnameView"
                        style="@style/TextInputStyle"
                        android:hint="@string/surname"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    style="@style/TextInputLayoutStyle">

                <AutoCompleteTextView
                        android:id="@+id/firstnameView"
                        style="@style/TextInputStyle"
                        android:hint="@string/firstname"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    style="@style/TextInputLayoutStyle">

                <AutoCompleteTextView
                        android:id="@+id/patronymicView"
                        style="@style/TextInputStyle"
                        android:hint="@string/patronymic"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/hostelNameView"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

            <android.support.design.widget.TextInputLayout
                    style="@style/TextInputLayoutStyle">

                <AutoCompleteTextView
                        android:id="@+id/roomNumberView"
                        style="@style/TextInputStyle"
                        android:hint="@string/roomNumber"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    style="@style/TextInputLayoutStyle">

                <AutoCompleteTextView
                        android:id="@+id/facultyView"
                        style="@style/TextInputStyle"
                        android:hint="@string/faculty"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/buttonHeight"
                    android:layout_margin="@dimen/activity_margin"
                    android:background="@drawable/btn_selector"
                    android:text="@string/uploadPhoto"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/roboto"
                    android:textSize="@dimen/text_size"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>